--- a/src/app/employee/employeedirectoryview/employeedirectoryview.component.html
+++ b/src/app/employee/employeedirectoryview/employeedirectoryview.component.html
@@ -71,7 +71,7 @@
                                                 </a>
                                             </div> 
                                             <div class="col-lg-4">
-                                                <a href="#" class="btn btn-orange"><i class="ri-stack-line align-bottom"></i> Organization Chart</a>
+                                                <a href="#" class="btn btn-orange" (click)="viewChart()"><i class="ri-stack-line align-bottom"></i> Organization Chart</a>
                                             </div>
                                         <!-- </div> -->
                                     </div>
