--- a/src/app/employee/loan-hr/loan-hr.component.html
+++ b/src/app/employee/loan-hr/loan-hr.component.html
@@ -433,7 +433,7 @@
                 </div>
                 <div class="col-sm-auto">
                     <div class="d-flex gap-1 flex-wrap">
-                        <h5 class="font-type fw-semibold fs-13 padding-up-5">Disbursement Date : <span class="text-orange">{{DISBURSEMENT_DATE}}</span></h5>
+                        <h5 class="font-type fw-semibold fs-13 padding-up-5">Disbursement Date : <span class="text-orange">{{DISBURSEMENT_DATE | date:'dd-MM-yyyy'}}</span></h5>
                     </div>
                 </div>
             </div>
