--- a/src/app/attendance/biometric-new/biometric-new.component.html
+++ b/src/app/attendance/biometric-new/biometric-new.component.html
@@ -49,7 +49,7 @@
                                                     <label for="specificSizeInputName" *ngIf="processdates.length>0" class="fw-semibold fs-16 text-orange">{{processdates[0].FROM_DATE | date: 'dd-MM-yyyy'}}</label> -->
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <a href="FileUpload"><button type="button" class="btn btn-orange" style="float: right;"> <i class="ri-upload-2-line"></i><span class="ms-2">Upload & Sync</span></button></a>
+                                                    <a href="fileuploadingNew"><button type="button" class="btn btn-orange" style="float: right;"> <i class="ri-upload-2-line"></i><span class="ms-2">Upload & Sync</span></button></a>
                                                 </div>
                                                 <!--end col-->
                                          
@@ -152,7 +152,7 @@
                                                 <div class="col-sm-auto"hidden>
                                                     <div class="d-flex flex-wrap">
         
-                                                        <a href="FileUpload"><button type="button" class="btn btn-soft-success"><i class="fa fa-upload" ></i>Upload</button></a>
+                                                        <a href="fileuploadingNew"><button type="button" class="btn btn-soft-success"><i class="fa fa-upload" ></i>Upload</button></a>
         
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                                     <td>{{listdailyattendance.INTIME}}</td>
                                                                     <td>{{listdailyattendance.OUTTIME}}</td>
                                                                     <td>{{listdailyattendance.WORKINGHRS}}</td>
-                                                                    <!-- <td>{{listdailyattendance.LAST_UPDATED_DATE}}</td> -->
+                                                                    <td>{{listdailyattendance.LAST_UPDATED | date:"dd-MM-yyyy hh:mm"}}</td>
                                                                 </tr>
                                                             </tbody>
 
