--- a/src/app/attendance/overtime/overtime.component.scss
+++ b/src/app/attendance/overtime/overtime.component.scss
@@ -3,4 +3,9 @@
     color: #999; 
     pointer-events: none; 
   }
+  button:disabled {
+    background-color: rgb(246, 186, 83);
+    color: white;
+    cursor: not-allowed;
+  }
   
